--- a/assets/Estilos/styles_2.css
+++ b/assets/Estilos/styles_2.css
@@ -4,10 +4,18 @@ body{
     
 }
 
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
 
 #sobre-mi {
     padding-top: 60px;
-    height: 450px;
+    height: 370px;
     text-align: center;
     
   }
@@ -42,3 +50,37 @@ body{
     width: 300px;
 
 }
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .zoom-image {
+    position: relative;
+    transition: transform 0.3s;
+    transform: translateY(100%);
+    cursor: pointer;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.3s;
+    pointer-events: none;
+  }
+  
+  .image-container:hover .zoom-image {
+    transform: translateY(0);
+  }
+  
+  .image-container:hover .overlay {
+    opacity: 1;
+  }
