--- a/assets/Estilos/styles.css
+++ b/assets/Estilos/styles.css
@@ -2,7 +2,6 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     background-image: url("../Imagenes/5.png");
-
 }
 
 .navbar {
@@ -22,4 +21,9 @@ body {
 .navbar a:hover {
     background-color: #ddd;
     color: black;
+}
+
+.contenedor_1{
+    justify-content: center;
+    align-items: center;
 }
