--- a/assets/Estilos/styles_3.css
+++ b/assets/Estilos/styles_3.css
@@ -6,6 +6,18 @@ body {
     background-color: #f2f2f2; /* Color de fondo general */
 }
 
+.boton-regresar {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
 #slider {
     position: relative;
     width: 100%;
